# bhook

./: .clang-format  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  build.gradle  clang-format.py  gradle.properties  settings.gradle
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature-request.yml
bytehook/: build.gradle  consumer-rules.pro  local_dependency.cmake
bytehook/src/main/: AndroidManifest.xml
bytehook/src/main/cpp/: CMakeLists.txt  bh_array.c  bh_array.h  bh_cfi.c  bh_cfi.h  bh_config.h  bh_const.h  bh_core.c  bh_core.h  bh_dl.c  bh_dl.h  bh_dl_iterate.c  bh_dl_iterate.h  bh_dl_monitor.c  bh_dl_monitor.h  bh_elf.c  bh_elf.h  bh_elf_manager.c  bh_elf_manager.h  bh_elf_relocator.c  bh_elf_relocator.h  bh_hook.c  bh_hook.h  bh_hook_manager.c  bh_hook_manager.h  bh_hub.c  bh_hub.h  bh_jni.c  bh_linker.c  bh_linker.h  bh_linker_mutex.c  bh_linker_mutex.h  bh_log.c  bh_log.h  bh_recorder.c  bh_recorder.h  bh_safe.c  bh_safe.h  bh_sig.h  bh_sleb128.c  (+19 more)
bytehook/src/main/cpp/include/: bytehook.h
bytehook/src/main/java/com/bytedance/android/bytehook/: ByteHook.java  ILibLoader.java
bytehook_sample/: build.gradle
bytehook_sample/src/main/: AndroidManifest.xml
bytehook_sample/src/main/cpp/: CMakeLists.txt  hacker.c  hacker_bytehook.cpp  hacker_bytehook.h  hookee.c  sample.c  sample.h
bytehook_sample/src/main/java/com/bytedance/android/bytehook/sample/: MainActivity.java  MyCustomApplication.java  NativeHacker.java  NativeHookee.java
bytehook_sample/src/main/res/layout/: activity_main.xml
bytehook_sample/src/main/res/values/: colors.xml  strings.xml  themes.xml
bytehook_systest/: build.gradle  consumer-rules.pro
bytehook_systest/src/main/cpp/: CMakeLists.txt  systest.c  systest.h  systest.map.txt  systest_jni.c
bytehook_systest/src/main/java/com/bytedance/android/bytehook/systest/: SysTest.java
bytehook_systest/src/main/res/values/: strings.xml
doc/: README.md  java_manual.zh-CN.md  native_manual.zh-CN.md  overview.zh-CN.md  quickstart.zh-CN.md  records.zh-CN.md  status_code.zh-CN.md
gradle/: check.gradle  prefab_bypass.gradle  publish.gradle
gradle/wrapper/: gradle-wrapper.properties
